--- a/sistema/site/public/ranking.html
+++ b/sistema/site/public/ranking.html
@@ -54,14 +54,14 @@
         <div class="conteudo ranking">
 
             <div id="ranking" class="tabela-ranking">
-                <div class="titulos">
+                <div class="campos">
                     <span>Usuário</span>
                     <span>Acertos</span>
                     <span>Pontuação</span>
                     <span>Jogador</span>
                 </div>
 
-                <div class="infos" id="infos">
+                <div class="resultados" id="infos">
                     <div class="nome" id="nome"></div>
                     <div class="acertos" id="acertos"></div>
                     <div class="pontuacao" id="pontuacao"></div>
